# codeduel

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  cargo.static.txt  diesel.toml  future_features.md  guide.md  init_db.sh  sec.json  temp_creator.sh  temp_remover.sh  temp_runner.sh
backend/: Cargo.toml  README.md  Rocket.toml  temp_creator.sh
backend/src/: db_models.rs  tc_execution_lib.rs
code_executer/: Cargo.toml  temp_remover.sh
code_executer/src/: lib.rs
migrations/2024-01-16-090128_init/: down.sql  up.sql
migrations/2024-01-23-152859_init_tables/: up.sql
solana_contract/: .gitignore  .prettierrc  Cargo.toml  entrypoint.rs  error.rs  instruction.rs  lib.rs  package.json  processor.rs  state.rs  tsconfig.json  wallet_lib.rs
solana_contract/lib/: helpers.ts  vars.ts
solana_contract/script/: transaction.ts
solana_contract/src/: error.rs  lib.rs  processor.rs
solana_contract/test/: index.test.ts
src/: api_models.rs  db_models.rs  lib.rs  macros.rs  schema.rs  tc_execution_lib.rs  wallet_lib.rs
src/code_executer/: cargo.static.txt  temp_creator.sh  temp_runner.sh
src/code_executer/src/: lib.rs  models.rs
temp_exe/codu_tmp_exeCTU52_94_5/: Cargo.toml  bin_builder.sh
temp_exe/codu_tmp_exeCTU52_94_5/src/: executable.rs  main.rs
