[package]
name = "codeduel_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

src = ["lib.rs"]

[[bin]]
name = "main"
path = "src/bin/main.rs"


[dependencies]
chrono = "0.4.31"
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
rocket = "0.4.5"
serde = { version = "1.0.195", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
