[package]
name = "codeduel_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

src = ["lib.rs"]

[[bin]]
name = "main"
path = "src/bin/main.rs"


[dependencies]
cargo-watch = "8.4.1"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
rocket = {version = "0.5.0", features = ["json"]}
serde = { version = "1.0.195", features = ["derive"] }
struct_iterable = "0.1.1"                                                                                              
tokio = { version = "1.18.2", features = ["full"] }       






