[package]
name = "code_executer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.33"
rocket = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]                                                              





                                                        





                                                        





                                                        






                                                        





                                                        





                                                        





                                                        





                                                        





                                                        





                                                        





                                                        





                                                        





                                                        
                                   





                                                        





                                                        





                                                        





                                                        






